--- a/Fakr.cabal
+++ b/Fakr.cabal
@@ -9,11 +9,11 @@ cabal-version: 1.12
 name:           Fakr
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/Fakr#readme>
-homepage:       https://github.com/githubuser/Fakr#readme
-bug-reports:    https://github.com/githubuser/Fakr/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2019 Author name here
+homepage:       https://github.com/githubuser/razzi#readme
+bug-reports:    https://github.com/githubuser/razzi/issues
+author:         MOKTAR ALHASAPI
+maintainer:     moktaralhasapi@gmail.com
+copyright:      2019 MOKTAR ALHASAPI
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -23,7 +23,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/Fakr
+  location: https://github.com/githubuser/razzi
 
 library
   exposed-modules:
